--- a/package.json
+++ b/package.json
@@ -1,23 +1,33 @@
 {
   "name": "aril-v2",
   "version": "1.0.0",
-  "description": "",
+  "description": "Locates Farmer's Markets by zip code",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "gulp": "gulp"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/bbleds/aril-v2.git"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Ben Bledsoe",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/bbleds/aril-v2/issues"
   },
   "homepage": "https://github.com/bbleds/aril-v2#readme",
   "dependencies": {
-    "bower": "^1.8.0",
-    "gulp": "^3.9.1"
+    "bower": "^1.8.0"
+  },
+  "devDependencies": {
+    "babel-preset-env": "^1.1.8",
+    "babel-preset-es2015": "^6.22.0",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-clean-css": "^2.3.2",
+    "gulp-concat": "^2.6.1",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^3.1.0",
+    "gulp-uglify": "^2.0.1"
   }
 }
