--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gulp-babel": "^6.1.2",
     "gulp-clean-css": "^2.3.2",
     "gulp-concat": "^2.6.1",
+    "gulp-order": "^1.1.1",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
     "gulp-uglify": "^2.0.1"
